# qui-vote-quoi

./: .env  .gitignore  datastructure.drawio  dept_to_average_vote.sql  docker-compose.yml  init.sql  main.py  name_to_dept.sql  pyproject.toml  readme.md  requierement.txt
.github/workflows/: test.yml
dashboard/: main.py
data_dumper/: file_manager.py  main.py  pyproject.toml
mon_env/: pyvenv.cfg
stats_work/: dept_to_average_vote.sql  main.py  name_to_dept.sql
tkui/: main.py
utils/: pgconnector.py
