[tool.poetry]
name = "vote-par-prenom"
version = "0.1.0"
description = ""
authors = ["Olivier Neve"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
requests = "^2.32.2"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
customtkinter = "^5.2.2"
pylint = "^3.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
